# lexaudit

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
corpus/: irrenunciabilidad_derechos.md  jornada_laboral.md  periodo_prueba.md  prestaciones_sociales.md  salario_minimo.md
docs/: ai-usage.md  decisions.md  idea-final-reto-seti.md  spec-lexaudit.md
examples/: contrato_ejemplo_1.txt  contrato_ejemplo_2.txt
src/lexaudit/: __init__.py  config.py
src/lexaudit/agents/: auditor.py  redactor.py  segmentador.py  verificador.py
src/lexaudit/graph/: state.py  workflow.py
src/lexaudit/llm/: provider.py
src/lexaudit/models/: schemas.py
src/lexaudit/prompts/: auditor.py  segmentador.py
src/lexaudit/rag/: ingest.py  retriever.py  vectorstore.py
tests/: test_grafo.py  test_redactor.py  test_verificador.py
