[project]
name = "lexaudit"
version = "0.1.0"
description = "Auditor preliminar multiagente de riesgos en contratos laborales colombianos"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Lady Gonzalez", email = "lady.kgonzalez@gmail.com" },
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.4",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "pypdf>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
